fixed font size of nav-links on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -371,7 +371,7 @@ footer h2 {
   }
 
   .nav-link {
-    font-size: 6em;
+    font-size: 4em;
   }
 
   .section-header {
